--- a/src/main/resources/templates/lendingapp/lendingapp.html
+++ b/src/main/resources/templates/lendingapp/lendingapp.html
@@ -110,11 +110,11 @@
                                         </thead>
                                         <tbody class="jp-gothic">
                                         <tr th:each="lendingBookDto, iterStat : *{lendingBookDtoList}">
-                                            <th th:text="${iterStat.count}">1</th>
-                                            <th th:text="${lendingBookDto.isbn}">978-1-4302-5908-4</th>
-                                            <th th:text="${lendingBookDto.bookName}">Spring Recipes</th>
-                                            <th th:text="${lendingBookDto.lendingState}">蔵書なし</th>
-                                            <th>
+                                            <td th:text="${iterStat.count}">1</td>
+                                            <td th:text="${lendingBookDto.isbn}">978-1-4302-5908-4</td>
+                                            <td th:text="${lendingBookDto.bookName}">Spring Recipes</td>
+                                            <td th:text="${lendingBookDto.lendingState}">蔵書なし</td>
+                                            <td>
                                                 <select class="form-control input-sm"
                                                         th:classappend="${#fields.hasErrors('*{lendingBookDtoList[__${iterStat.index}__].lendingAppFlg}')} ? 'has-error' : ''"
                                                         th:field="*{lendingBookDtoList[__${iterStat.index}__].lendingAppFlg}"
@@ -126,8 +126,8 @@
                                                 <span th:text="${@vh.getText('LendingBookLendingAppFlgValues', lendingBookDto.lendingAppFlg)}"
                                                       th:if="*{lendingApp.status} != ${@vh.getValue('LendingAppStatusValues', 'UNAPPLIED')}">しない
                                                 </span>
-                                            </th>
-                                            <th>
+                                            </td>
+                                            <td>
                                                 <input type="text" class="form-control input-sm"
                                                        th:classappend="${#fields.hasErrors('*{lendingBookDtoList[__${iterStat.index}__].lendingAppReason}')} ? 'has-error' : ''"
                                                        th:field="*{lendingBookDtoList[__${iterStat.index}__].lendingAppReason}"
@@ -135,7 +135,7 @@
                                                 <span th:text="${lendingBookDto.lendingAppReason}"
                                                       th:if="*{lendingApp.status} != ${@vh.getValue('LendingAppStatusValues', 'UNAPPLIED')}">入力された申請理由を表示する
                                                 </span>
-                                            </th>
+                                            </td>
                                             <input type="hidden" th:field="*{lendingBookDtoList[__${iterStat.index}__].lendingBookId}"/>
                                             <input type="hidden" th:field="*{lendingBookDtoList[__${iterStat.index}__].isbn}"/>
                                             <input type="hidden" th:field="*{lendingBookDtoList[__${iterStat.index}__].bookName}"/>
