--- a/src/main/resources/templates/lendingapproval/lendingapproval.html
+++ b/src/main/resources/templates/lendingapproval/lendingapproval.html
@@ -66,13 +66,8 @@
                     <div class="col-xs-12">
                         <form id="lendingapprovalForm" method="post" action="/lendingapproval/complete"
                               th:action="@{/lendingapproval/complete}" th:object="${lendingapprovalForm}">
-                            <div class="alert alert-danger" th:if="${#fields.hasGlobalErrors()}">
-                                <p th:each="err : ${#fields.globalErrors()}" th:text="${err}">共通エラーメッセージ表示エリア</p>
-                            </div>
-                            <div class="alert alert-success" th:if="${successMessages}">
-                                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-                                <p th:each="msg : ${successMessages}" th:text="${msg}">通常メッセージ表示エリア</p>
-                            </div>
+                            <div th:replace="common/mainparts :: alert-danger"></div>
+                            <div th:replace="common/mainparts :: alert-success"></div>
                             <div class="box" th:if="*{lendingApp != null}">
                                 <div class="box-body no-padding">
                                     <div class="col-xs-6 no-padding">
