#128 Thymeleaf テンプレートに記述した @thymesVar のコメント文が HTML に出力されないよう、コメントの形式を Thymeleaf parser-level comment blocks に変更しました

--- a/src/main/resources/templates/sessionsample/first.html
+++ b/src/main/resources/templates/sessionsample/first.html
@@ -44,7 +44,7 @@
             <section class="content">
                 <div class="row">
                     <div class="col-xs-12">
-                        <!-- @thymesVar id="sessionSampleForm" type="ksbysample.webapp.lending.web.sessionsample.SessionSampleForm" -->
+                        <!--/* @thymesVar id="sessionSampleForm" type="ksbysample.webapp.lending.web.sessionsample.SessionSampleForm" */-->
                         <form id="sessionSampleForm" method="post" action="/sessionsample/confirm" th:action="@{/sessionsample/confirm}"
                               th:object="${sessionSampleForm}">
                             <table class="table table-bordered">
