--- a/src/main/resources/templates/common/mainparts.html
+++ b/src/main/resources/templates/common/mainparts.html
@@ -1,33 +1,43 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-<head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>検索対象図書館登録</title>
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+<head th:fragment="head(title, links, style)">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title th:replace="${title} ?: _">検索対象図書館登録</title>
     <!-- Tell the browser to be responsive to screen width -->
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"/>
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.4 -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <!-- Font Awesome Icons -->
-    <link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <!-- Ionicons -->
-    <link href="/css/ionicons.min.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/ionicons.min.css" rel="stylesheet" type="text/css">
     <!-- Theme style -->
-    <link href="/css/AdminLTE.min.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/AdminLTE.min.css" rel="stylesheet" type="text/css">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
-    <link href="/css/skins/_all-skins.min.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/skins/_all-skins.min.css" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-        <script src="/js/html5shiv.min.js"></script>
-        <script src="/js/respond.min.js"></script>
+    <script src="/js/html5shiv.min.js"></script>
+    <script src="/js/respond.min.js"></script>
     <![endif]-->
 
-    <style>
+    <!-- ここに各htmlで定義された link タグが追加される -->
+    <th:block th:replace="${links} ?: _"/>
+
+    <style type="text/css">
+        <!--
+        .jp-gothic {
+            font-family: Verdana, "游ゴシック", YuGothic, "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+        }
+        .content-wrapper {
+            background-color: #fffafa;
+        }
         .noselected-library {
             color: #ff8679 !important;
             font-size: 100%;
@@ -38,10 +48,26 @@
             font-size: 100%;
             font-weight: 700;
         }
-        .content-wrapper {
-            background-color: #fffafa;
+        .box-body.no-padding {
+            padding-bottom: 10px !important;
         }
+        .table>tbody>tr>td
+        , .table>tbody>tr>th
+        , .table>tfoot>tr>td
+        , .table>tfoot>tr>th
+        , .table>thead>tr>td
+        , .table>thead>tr>th {
+            padding: 5px;
+            font-size: 90%;
+        }
+        .has-error {
+            background-color: #ffcccc;
+        }
+        -->
     </style>
+
+    <!-- ここに各htmlで定義された style タグが追加される -->
+    <th:block th:replace="${style} ?: _"/>
 </head>
 
 <!-- ADD THE CLASS layout-top-nav TO REMOVE THE SIDEBAR. -->
