#130 LibraryHelper#getSelectedLibrary は図書館未選択時には null を返すようにし、Thymeleaf テンプレートでは The No-Operation token の機能を利用して null の時には th:text の処理が実行されないようにしました

--- a/src/main/resources/templates/common/mainparts.html
+++ b/src/main/resources/templates/common/mainparts.html
@@ -102,7 +102,10 @@
 
                 <!-- Navbar Right Menu -->
                 <div class="navbar-custom-menu">
-                    <p class="navbar-text" th:classappend="${#strings.startsWith(@libraryHelper.getSelectedLibrary(), '※')} ? 'noselected-library' : 'selected-library'" th:text="${@libraryHelper.getSelectedLibrary()}">※図書館が選択されていません</p>
+                    <p class="navbar-text"
+                       th:with="selectedLibrary=${@libraryHelper.getSelectedLibrary()}"
+                       th:classappend="${selectedLibrary} ? 'selected-library' : 'noselected-library'"
+                       th:text="${selectedLibrary} ?: _">※図書館が選択されていません</p>
                     <ul class="nav navbar-nav">
                         <li><a href="/logout">ログアウト</a></li>
                     </ul>
