--- a/src/main/resources/templates/common/mainparts.html
+++ b/src/main/resources/templates/common/mainparts.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
+<html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:fragment="head(title, links, style)">
     <meta charset="UTF-8">
