--- a/src/main/resources/templates/loginsuccess.html
+++ b/src/main/resources/templates/loginsuccess.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
+<html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.w3.org/1999/xhtml">
 <head th:replace="~{common/mainparts :: head(~{::title}, ~{::link}, ~{::style})}">
     <title>テスト用ログイン成功ページ</title>
