--- a/src/main/resources/templates/textareamemo/index.html
+++ b/src/main/resources/templates/textareamemo/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{common/mainparts :: head(~{::title}, ~{::link}, ~{::style})}">
     <title>Thymeleaf で textarea に入力された改行があるデータをテキスト表示する</title>
 
